--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,7 @@
   padding: 10px 20px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  max-height: 10%;
 }
 
 .navbar-brand {
@@ -106,7 +107,7 @@
   height: 100%;
 }
 .navbar-brand img {
-  width: 15%;
+  max-width: 10%;
 }
 
 .navbar-btns {
