--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,8 @@
   padding: 10px 20px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   max-height: 10%;
 }
 
