Deleted desktop.ini & made the Inicio button in navbar functional

--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,10 @@
   max-height: 10%;
 }
 
+.navbar .link {
+ text-decoration: none;
+}
+
 .navbar-brand {
   display: flex;
   align-items: center;
