se agrego el contador y se agrando el texto de analisis de progreso, tambien se cambio de color el boton de detener analiss y una vez la barra de progreso se completa al 100 se redirgi a la pagina results.

--- a/src/styles/progressbar.css
+++ b/src/styles/progressbar.css
@@ -1,10 +1,18 @@
 /* progressbar.css */
 
+
+.main h2 {
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
 .progress-container {
     background-color: #e0e0e0;
     border-radius: 8px;
     overflow: hidden;
-    height: 30px;
+    height: 45px;
     width: 100%;
   }
   
@@ -63,5 +71,21 @@
   
   .btn.confirm:hover {
     background-color: #dc2626;
+  }
+  .start-btn {
+    background-color: #026937;
+    color: white;
+    padding: 0.75rem 1.5rem;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 1rem;
+    border: none;
+    cursor: pointer;
+    display: block;
+    margin: 2rem auto 0 auto;
+  }
+  
+  .start-btn:hover {
+    background-color: #014f2e;
   }
   
