--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@
 }
 
 .container {
-  border: 2px solid #333;
+  /* border: 2px solid #333; */
   border-radius: 10px;
   margin: 20px auto;
   max-width: 80%;
