--- a/src/styles/progressbar.css
+++ b/src/styles/progressbar.css
@@ -18,7 +18,7 @@
   
   .progress-bar {
     height: 100%;
-    background-color: #4ade80;
+    background-color: #43b649;
     display: flex;
     align-items: center;
     justify-content: center;
