--- a/src/styles/imgUploader.css
+++ b/src/styles/imgUploader.css
@@ -43,63 +43,80 @@ hr {
     text-align: center;
   }
 
-  .info-content ul {
-    padding-left: 20px;
-  }
+.info-content ul {
+  padding-left: 20px;
+}
 
-  .upload-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-  }
+.upload-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
 
-  .image-placeholder {
-    width: 512px;
-    height: 512px;
-    border: 2px solid #f9a02d;
-    border-radius: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 80px;
-    color: #f9a02d;
-  }
+.image-placeholder {
+  width: 512px;
+  height: 512px;
+  border: 2px solid #f9a02d;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 80px;
+  color: #f9a02d;
+}
 
-  .control-box {
-    width: 40%;
-    display: flex;
-    justify-content: space-between;
-  }
+.control-box {
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+}
 
-  .image-buttons-box {
-    display: flex;
-    gap: 20px;
-    margin-top: 10px;
-  }
+.image-buttons-box {
+  display: flex;
+  gap: 20px;
+  margin-top: 10px;
+}
 
-  .image-buttons-box button {
-    padding: 10px 20px;
-    font-size: 14px;
-    border-radius: 10px;
-    border: none;
-    /* background-color: #aed581; */
-    color: white;
-    cursor: pointer;
-  }
+.image-buttons-box button {
+  padding: 10px 20px;
+  font-size: 14px;
+  border-radius: 10px;
+  border: none;
+  /* background-color: #aed581; */
+  color: white;
+  cursor: pointer;
+}
 
-  .analyze-button {
-    margin-top: 15px;
-    padding: 12px 30px;
-    font-size: 16px;
-    /* background-color: #0b5e20; */
-    color: white;
-    border: none;
-    border-radius: 12px;
-    cursor: pointer;
-  }
+.analyze-button {
+  margin-top: 15px;
+  padding: 12px 30px;
+  font-size: 16px;
+  /* background-color: #0b5e20; */
+  color: white;
+  border: none;
+  border-radius: 12px;
+  cursor: pointer;
+}
 
-  .analyze-button:hover {
-    background-color: #087f23;
-  }
+.analyze-button:hover {
+  background-color: #087f23;
+}
 
+#filter-btn {
+  background-color: #8dc63f;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 20px;
+  font-size: 14px;
+  cursor: pointer;
+
+  transition: all 0.1s ease;
+  outline: none;
+}
+
+#filter-btn:active {
+  background-color: #6fa22e;
+  transform: translateY(2px);
+}
